[package]
name = "eml-validate"
description = "Mod validator for EML."
license = "MIT"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.204", features=["derive"]}
serde_json = "1.0.120"
walkdir = "2.5.0"
